Cambio 5: Notificaciones por correo

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -17,4 +17,20 @@
 
     </string-array>
 
+    <string-array name="tiposNotificaciones">
+
+        <item>Nuevos lugares</item>
+        <item>Cerca de mí</item>
+        <item>Mejor valorados</item>
+
+    </string-array>
+
+    <string-array name="tiposNotificacionesValores">
+
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+
+    </string-array>
+
 </resources>
